--- a/my-adventure/package.json
+++ b/my-adventure/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
+    "mongodb": "^6.3.0",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
