--- a/my-adventure/package.json
+++ b/my-adventure/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
+    "react-multi-carousel": "^2.8.4",
     "react-native-star-rating-widget": "^1.7.2",
     "react-scripts": "^5.0.1",
     "react-simple-chatbot": "^0.6.1",
@@ -36,7 +37,7 @@
     "web-vitals": "^2.1.4"
   },
   "engines": {
-    "node" : "16.15.1"
+    "node": "16.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
